# Rift

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  biome.json  bunfig.toml  docker-compose.yml  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
cli/: package.json
cli/src/: api.ts  format.ts  globals.d.ts  index.ts
cli/src/__tests__/: commands.test.ts
cli/src/commands/: chat.ts  files.ts  git.ts  health.ts  repos.ts  session.ts
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.css  App.tsx  apiUrl.ts  diff.ts  main.tsx  storage.ts
client/src/__tests__/: ChangesPage.test.tsx  ChatInput.test.tsx  DashboardPage.test.tsx  DiffViewer.test.tsx  ErrorBanner.test.tsx  FilesPage.test.tsx  MessageList.test.tsx  SessionContext.test.tsx  SessionShell.test.tsx  TabBar.test.tsx  TextFileEditor.test.ts  TextFileEditor.test.tsx  ToolCallCard.test.tsx  diff.test.ts  pwa.test.ts  setup.ts  useAgentSession.test.tsx  useApi.test.tsx  useGitRepo.test.tsx
client/src/components/: ChatInput.css  (+16 more)
scripts/: configure-tailscale.ps1  generate-icons.py  install-windows-service.ps1  uninstall-windows-service.ps1
server/: package.json  tsconfig.json
server/src/: app.ts  index.ts  pathUtils.ts  session.ts  ws.ts
shared/: package.json  tsconfig.json
shared/src/: index.ts  types.ts
src/: config.rs  db.rs  error.rs  main.rs  scheduler.rs  telegram.rs  web_fetch.rs
src/agent/: anthropic.rs  mod.rs  tools.rs  types.rs
state/: description.md  plan.md  requests.md
(+34 files in other folders)
