[package]
name = "imp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cron = "0.13"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
html2text = "0.14"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
url = "2.5.8"

[dev-dependencies]
wiremock = "0.6"
